re PR c++/16301 (ICE with strong using)

2004-10-17  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/16301
        * namelookup.c (parse_using_directive): If we have a
        error_mark_node, do not set the decl namespace associations
        on it.

2004-10-17  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/16301
        * g++.dg/lookup/strong-using-4.C: New test.

From-SVN: r89178